dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" 
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"     
spec:
  tls:
  - hosts:
    - kubernetes-dashboard.aws.icteam.be
    secretName: kubernetes-dashboard-tls
  rules:
  - host: kubernetes-dashboard.aws.icteam.be
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 8443
